# pixi-mojo-experiments

./: .gitignore  .pre-commit-config.yaml  README.md  TODOs.md  life.mojo  pyproject.toml
.github/workflows/: tests.yml
pixi_mojo_experiments/: gridv1.mojo
test/: test_gridv1.mojo
